--- a/src/components/quizAnswer/styles.scss
+++ b/src/components/quizAnswer/styles.scss
@@ -132,7 +132,7 @@
     z-index: 2;
 
     &.animate {
-      animation: animUp 1s ease 1s forwards;
+      animation: animDown 1s ease 1s forwards;
     }
 
     @media (max-height: 700px) {
@@ -340,9 +340,9 @@
   }
 }
 
-@keyframes animUp {
+@keyframes animDown {
   0% {
-    transform: translateY(100vh);
+    transform: translateY(-100vh);
   }
 
   100% {
